--- a/src/Assessment.Console/Assessment.Console.csproj
+++ b/src/Assessment.Console/Assessment.Console.csproj
@@ -8,7 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Assessment.Shared\Assessment.Shared.csproj"/>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Assessment.Shared\Assessment.Shared.csproj" />
     </ItemGroup>
 
 </Project>
